@startuml
'https://plantuml.com/class-diagram

class ParsingADataFile
{
    - a: int "amount"
}
class readFile
{
    -inputFile
    +amount()
    +copyInput(int size, String[] arr)
}

class Manipulate
{
    splitData(int index, String[] arr)

    sortData(String list_item)
    headerData()
}

ParsingADataFile-->readFile
readFile-->ParsingADataFile
ParsingADataFile-->Manipulate

@enduml